fixed blank space on the side and wrapped nav bar wrap when screen is too small to fit

--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 /* -------  General Styles ------- */
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 
 body {
   font-family: "Lato", sans-serif;
@@ -74,6 +81,7 @@ header nav ul {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 header nav ul li {
@@ -107,6 +115,7 @@ form select,
 form input {
   margin-bottom: 20px;
   width: 180px;
+  display: flex;
 }
 
 form button {
